# rules_kubebuilder

./: README.md  WORKSPACE
controller-gen/: BUILD.bazel  controller-gen.bzl
