load("@rules_kubebuilder//controller-gen:controller-gen-toolchain.bzl", "controller_gen_toolchain")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

filegroup(
    name = "srcs",
    srcs = glob([
        "*.bzl",
        "**/*.bzl",
    ]),
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "release",
    srcs = [
        "BUILD.bazel",
        ":srcs",
    ],
    package_dir = "controller-gen",
    visibility = ["//visibility:public"],
)

toolchain_type(name = "toolchain")

controller_gen_toolchain(
    name = "controller_gen_linux",
    controller_gen_bin = "@controller_gen_linux_amd64//file:downloaded",
)

controller_gen_toolchain(
    name = "controller_gen_darwin",
    controller_gen_bin = "@controller_gen_darwin_arm64//file:downloaded",
)

toolchain(
    name = "controller_gen_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":controller_gen_linux",
    toolchain_type = ":toolchain",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "controller_gen_darwin_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
    toolchain = ":controller_gen_darwin",
    toolchain_type = ":toolchain",
    visibility = ["//visibility:public"],
)
